added displaying pet information

--- a/public/search.html
+++ b/public/search.html
@@ -5,8 +5,12 @@
     <title>Browse</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+   
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -31,9 +35,20 @@
                 </nav>
             </div>
 
-            <div class="container" id = "content">
+    <div class="container" id = "content"  >
 
-    <h2> Search here</h2>
+        <h2> Browse</h2>
+
+
+        <div class="row" id="petContent">
+            <div >
+
+            </div>
+              
+        </div>
+
+
+
 </div>
     <footer id="myFooter">
         <div class="container">
@@ -72,6 +87,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/pets.js"></script>
 </body>
 
 </html>
