--- a/public/pet.html
+++ b/public/pet.html
@@ -34,6 +34,9 @@
             <div class="container" id = "content">
 
     <h2> Pet info here</h2>
+                <div id="petContent">
+
+                </div>
 </div>
     <footer id="myFooter">
         <div class="container">
@@ -72,6 +75,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/pets.js"></script>
 </body>
 
 </html>
