added pet info page

--- a/public/about.html
+++ b/public/about.html
@@ -24,6 +24,7 @@
                                 <li role="presentation"><a href="/about">About</a></li>
                                 <li role="presentation"><a href="/search">Browse</a></li>
                                 <li role="presentation"><a href="#">Events</a></li>
+                                <li role="presentation"><a href="/contact">Contact</a></li>
                             </ul>
                             <p class="navbar-text navbar-right actions"><a class="navbar-link login" href="#">Log In</a> <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
                         </div>
@@ -32,7 +33,12 @@
             </div>
 
 <div class="container" id = "content">
-    <h2> About us</h2>
+    <div class="jumbotron">
+            <h2> About us</h2>
+
+            <p> Dallas Pet Adoption is a non-profit organization based in Dallas- Fort Worth, Texas which was launched in 2018.</p>
+    </div>
+    
 </div>
     <footer id="myFooter">
         <div class="container">
@@ -45,6 +51,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="#">Sign up</a></li>
+                        <li><a href="/search">Browse</a></li>  
 
                     </ul>
                 </div>
