--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
                         <li role="presentation"><a href="/about">About</a></li>
                         <li role="presentation"><a href="/search">Browse</a></li>
                         <li role="presentation"><a href="#">Events</a></li>
+                        <li role="presentation"><a href="/contact">Contact</a></li>
                     </ul>
                     <p class="navbar-text navbar-right actions"><a class="navbar-link login" data-toggle="modal"
                             data-target="#loginModal">Log In</a> <a class="btn btn-default action-button" role="button"
@@ -44,9 +45,9 @@
         <section class="jumbotron text-center containerMain">
           
                 <!-- <h1 class="jumbotron-heading">Image</h1> -->
-                <p class="lead text-muted">Adopt a pet now!</p>
+                <p class="lead text-muted">Find a pet now!</p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Click here</a>
+                    <a href="/search" class="btn btn-primary my-2">Click here</a>
                 </p>
             
         </section>
@@ -287,7 +288,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="#">Sign up</a></li>
-
+                        <li><a href="/search">Browse</a></li>   
                     </ul>
                 </div>
                 <div class="col-sm-2">
