--- a/public/search.html
+++ b/public/search.html
@@ -6,10 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
+   
 
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -28,6 +27,7 @@
                                 <li role="presentation"><a href="/about">About</a></li>
                                 <li role="presentation"><a href="/search">Browse</a></li>
                                 <li role="presentation"><a href="#">Events</a></li>
+                                <li role="presentation"><a href="/contact">Contact</a></li>
                             </ul>
                             <p class="navbar-text navbar-right actions"><a class="navbar-link login" href="#">Log In</a> <a class="btn btn-default action-button" role="button" href="#">Sign Up</a></p>
                         </div>
@@ -37,10 +37,13 @@
 
     <div class="container" id = "content"  >
 
-        <h2> Browse</h2>
+        <h3> Filter
 
+        <input id = "breed" type = "text"> 
+    </h3>
 
-        <div class="row" id="petContent">
+        <div class="row" >
+            <ul id="petContent"></ul>
             <div >
 
             </div>
@@ -61,6 +64,7 @@
                     <ul>
                         <li><a href="/">Home</a></li>
                         <li><a href="#">Sign up</a></li>
+                        <li><a href="/search">Browse</a></li>  
 
                     </ul>
                 </div>
