added pet images

--- a/public/about.html
+++ b/public/about.html
@@ -36,6 +36,7 @@
     <div class="jumbotron">
             <h2> About us</h2>
 
+            <img id = "aboutImage" src="/images/aboutimage.jpg">
             <p> Dallas Pet Adoption is a non-profit organization based in Dallas- Fort Worth, Texas which was launched in 2018.</p>
     </div>
     
