--- a/public/pet.html
+++ b/public/pet.html
@@ -34,14 +34,13 @@
 
             <div class="container" id = "content">
 
-    <h2> Pet info here</h2>
                 <div class="jumbotron">
                     <div class="row">
-                        <div class="col-lg-4">
-                                <img src="./assets/images/me.jpg" width="200" height="200" class = "photo">
+                        <div class="col-lg-6" id = "petImage">
+                                <!-- <img src="./assets/images/me.jpg" width="200" height="200" class = "photo"> -->
                         </div>
-                        <div class="col-lg-8" id = "petInfo">
-                            <p > </p>
+                        <div class="col-lg-6" id = "petInfo">
+                           
                         </div>
                     </div>
                         
