--- a/public/search.html
+++ b/public/search.html
@@ -43,7 +43,7 @@
     </h3>
 
         <div class="row" >
-            <ul id="petContent"></ul>
+            <div class="col" id="petContent"></div>
             <div >
 
             </div>
