--- a/public/index.html
+++ b/public/index.html
@@ -23,241 +23,43 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
 
-                        <li ><a href="/about">About</a></li>
-                        <li ><a href="/search">Browse</a></li>
-                        <li ><a href="#">Events</a></li>
-                        <li ><a href="/contact">Contact</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/search">Browse</a></li>
+                        <li><a href="#">Events</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
-                    <p class="navbar-text navbar-right actions"><a class="navbar-link login" data-toggle="modal"
+                    <div class="navbar-text navbar-right actions"><a class="navbar-link login" data-toggle="modal"
                             data-target="#userModal">Log In</a> <a class="btn btn-default action-button" role="button"
-                            data-toggle="modal" data-target="#userModal">Sign Up</a></p>
+                            data-toggle="modal" data-target="#userModal">Sign Up</a></div>
                 </div>
             </div>
         </nav>
     </div>
 
 
-
-
-    <!-- Image container-->
-    <div class="container">
-
-        <section class="jumbotron jumbotron-fluid text-center containerMain">
-
-            <div id="text">
-                <h1>Find a pet now!</h1>
-                <p>
-                    <a href="/search" class="btn btn-primary my-2">Click here</a>
-                </p>
-            </div>
-
-        </section>
-    </div>
-
-
-    <div class="container">
-        <!-- /#myCarousel -->
-        <div class="carousel slide" id="myCarousel">
-            <div class="carousel-inner">
-                <div class="item active">
-                    <ul class="thumbnails">
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div><!-- /Slide1 -->
-                <div class="item">
-                    <ul class="thumbnails">
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div><!-- /Slide2 -->
-                <div class="item">
-                    <ul class="thumbnails">
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="col-sm-3">
-                            <div class="fff">
-                                <div class="thumbnail">
-                                    <a href="#"><img src="http://placehold.it/360x240" alt=""></a>
-                                </div>
-                                <div class="caption">
-                                    <h4>Praesent commodo</h4>
-
-                                    <a class="btn btn-mini" href="#">» Read More</a>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div><!-- /Slide3 -->
-            </div>
-
-
-            <!-- <nav>
-                <ul class="control-box pager">
-                    <li><a data-slide="prev" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
-                    <li><a data-slide="next" href="#myCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
-                </ul>
-            </nav> -->
-            <!-- /.control-box -->
-
-        </div><!-- /#myCarousel -->
-    </div>
-
-
-
-
-
-
     <!-- User Modal -->
     <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content text-center">
-
+            <div class="modal-content">
                 <div class="modal-body text-center">
-                    <div role="tabpanel">
-                        <!-- Nav tabs -->
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li  ><a href="#loginTab" aria-controls="loginTab" role="tab"
-                                    data-toggle="tab">Login</a>
 
-                            </li>
-                            <li  class="active"><a href="#signupTab" aria-controls="signupTab" role="tab"
-                                    data-toggle="tab">Sign up</a>
 
-                            </li>
-                        </ul>
-                        <!-- Tab panes -->
-                        <div class="tab-content">
-                            <div role="tabpanel" class="tab-pane " id="loginTab">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs">
+                        <li><a href="#loginTab" aria-controls="loginTab" role="tab" data-toggle="tab">Login</a>
+                        </li>
+                        <li class="active"><a href="#signupTab" aria-controls="signupTab" role="tab" data-toggle="tab">Sign
+                                up</a>
+                        </li>
+                    </ul>
 
-                                <form class="form-inline">
-                                    <br>
+
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane " id="loginTab">
+
+                            <form class="form-inline">
+                                <br>
                                 <div class="form-group">
                                     <label class="sr-only" for="email">Email</label><input type="text" class="form-control input-sm email"
                                         placeholder="Email" name="email">
@@ -271,14 +73,14 @@
 
                                 <button type="submit" class="btn btn-info login ">Login</button>
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                </form>
+                            </form>
 
-                            </div>
+                        </div>
 
-                            <div role="tabpanel" class="tab-pane active" id="signupTab">
+                        <div role="tabpanel" class="tab-pane active" id="signupTab">
 
-                                    <form class="form-inline">
-                                            <br>
+                            <form class="form-inline">
+                                <br>
                                 <div class="form-group">
                                     <label class="sr-only" for="fName">First Name</label><input type="text" class="form-control input-sm"
                                         placeholder="First Name" id="fName" name="fName">
@@ -302,16 +104,65 @@
 
                                 <button type="submit" class="btn btn-info signup">Sign up</button>
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                                </form>
-
-                            </div>
+                            </form>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
+
+
+    <!-- Main container-->
+    <div class="container">
+
+        <section class="jumbotron jumbotron-fluid text-center containerMain">
+
+            <div id="text">
+                <h1>Find a pet now!</h1>
+                <p>
+                    <a href="/search" class="btn btn-primary my-2">Click here</a>
+                </p>
+            </div>
+
+        </section>
+
+
+        <!-- /Pet images Carousel -->
+        <div class="carousel slide" id="petCarousel">
+
+
+            <div class="carousel-inner">
+                <div class="item active">
+                    <ul id="slide1">
+                    </ul>
+                </div><!-- /Slide1 -->
+
+                <div class="item">
+                    <ul id="slide2">
+                    </ul>
+                </div>
+
+                <div class="item">
+                    <ul id="slide3">
+                    </ul>
+                </div>
+
+            </div>
+
+            <ul class="control-box pager">
+                <li><a data-slide="prev" href="#petCarousel" class=""><i class="glyphicon glyphicon-chevron-left"></i></a></li>
+                <li><a data-slide="next" href="#petCarousel" class=""><i class="glyphicon glyphicon-chevron-right"></i></li>
+            </ul>
+
+        </div>
+
+    </div>
+
+
+
+
 
 
 
@@ -363,6 +214,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/js/users.js"></script>
+    <script src="/js/carousel.js"></script>
 </body>
 
 </html>
