--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                     <div class="tab-content">
                         <div role="tabpanel" class="tab-pane " id="loginTab">
 
-                            <form class="form-inline">
+                            <form class="form-inline log" action="/pet">
                                 <br>
                                 <div class="form-group">
                                     <label class="sr-only" for="email">Email</label><input type="text" class="form-control input-sm email"
@@ -69,10 +69,11 @@
                                     <label class="sr-only" for="password">Password</label>
                                     <input type="password" class="form-control input-sm pw" placeholder="Password" name="password">
                                 </div><br><br>
-
+                                <div class="form-group" id= "log"> </div>
+                                <br>
 
                                 <button type="submit" class="btn btn-info login ">Login</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
                             </form>
 
                         </div>
@@ -99,11 +100,11 @@
                                     <input type="password" class="form-control input-sm" placeholder="Password" id="password"
                                         name="password">
                                 </div><br><br>
-
-
+                                <div class="form-group" id= "err"> </div>
+                                <br>
 
                                 <button type="submit" class="btn btn-info signup">Sign up</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
                             </form>
                         </div>
                     </div>
