fixed getting pet info

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                 <div class="item active">
                     <ul id="slide1">
                     </ul>
-                </div><!-- /Slide1 -->
+                </div>
 
                 <div class="item">
                     <ul id="slide2">
@@ -160,13 +160,6 @@
         </div>
 
     </div>
-
-
-
-
-
-
-
 
 
 
