--- a/public/index.html
+++ b/public/index.html
@@ -46,9 +46,9 @@
 
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs">
-                        <li><a href="#loginTab" aria-controls="loginTab" role="tab" data-toggle="tab">Login</a>
+                        <li id = "navLogin"><a href="#loginTab" aria-controls="loginTab" role="tab" data-toggle="tab">Login</a>
                         </li>
-                        <li class="active"><a href="#signupTab" aria-controls="signupTab" role="tab" data-toggle="tab">Sign
+                        <li id = "navSignup" class="active" ><a href="#signupTab" aria-controls="signupTab" role="tab" data-toggle="tab">Sign
                                 up</a>
                         </li>
                     </ul>
@@ -72,7 +72,7 @@
                                 <div class="form-group" id= "log"> </div>
                                 <br>
 
-                                <button type="submit" class="btn btn-info login ">Login</button>
+                                <button type="submit" class="btn btn-info loginButton ">Login</button>
                                 <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
                             </form>
 
