--- a/public/search.html
+++ b/public/search.html
@@ -43,10 +43,15 @@
     <!-- Main Container -->
     <div class="container" id="content">
 
-        <h3 id="filter"> Filter
+        <div class="row">
+                <h3 id="filter"> Filter
 
-            <input id="breed" type="text">
-        </h3>
+                        <input id="breed" type="text">
+                    </h3>
+
+                   
+        </div>
+        
 
         <div class="row form-group">
             <ul id="petContent">
