--- a/public/search.html
+++ b/public/search.html
@@ -63,8 +63,8 @@
         </div>
 
 
-        <div class="jumbotron">
-            <div class="row" id="petInf">
+        <div class="jumbotron" id="petJumbotron">
+            <div class="row" >
 
                 <div class="col-lg-6" id="petImage">
 
@@ -190,14 +190,14 @@
     <!-- footer -->
     <footer id="myFooter">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
+            <div class="row" >
+                <div class="col-sm-3" >
                     <h2 class="logo"><a href="/"> DPA </a></h2>
                 </div>
                 <div class="col-sm-2">
                     <h5>Get started</h5>
-                    <ul>
-                        <li><a href="/">Home</a></li>
+                    <ul  >
+                        <li ><a  href="/">Home</a></li>
                         <li><a data-toggle="modal" data-target="#userModal">Sign up</a></li>
                         <li><a href="/search">Browse</a></li>
                     </ul>
