--- a/public/user.html
+++ b/public/user.html
@@ -37,7 +37,7 @@
 <div class="container" id = "content">
     <div class="jumbotron">
             <h2> Welcome!</h2>
-        <div class="row test">
+        <div class="row test" id = "test">
                 <h3> Your Pets ShortList</h3>
 
                 <table class="table table-striped">
@@ -57,7 +57,7 @@
                             <td>Otto</td>
                             <td>@mdo</td>
                             <td> hello</td>
-                            <td><button>Delete</button></td>
+                            <td><button id ='delete'>Delete</button></td>
                           </tr>
                           
                         </tbody>
@@ -200,6 +200,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/js/users.js"></script>
+ 
 </body>
 
 </html>
